# empyrical

./: .gitignore  README.md  hill1t.py  pyproject.toml  requirements.txt
src/empyrical/: __init__.py  anki.py  cli.py  core.py  coverage.py  hill1t.py  mine.py  plotting.py
tests/: conftest.py  test_core.py  test_coverage.py  test_hill1t.py  test_mine.py
